Started to style the sidebar.

--- a/app.html
+++ b/app.html
@@ -46,7 +46,7 @@
 				<button class="get-code">Copy CSS</button>
 			</section>
 			<section id="sidebar">
-				<div id="top-bar">
+				<div class="top-bar">
 					<div class="opacity">
 						<span>Opacity</span>
 						<div class="number-input">
@@ -57,17 +57,17 @@
 				</div>
 				<div id="layers">
 					<div class="layer">
-						<div class="layer-preview"></div>
+						<div class="preview" style="background: red"></div>
 						<div class="visible"></div>
 						<div class="name">Red Button</div>
 					</div>
 					<div class="layer">
-						<div class="layer-preview"></div>
+						<div class="preview" style="background: blue"></div>
 						<div class="visible"></div>
 						<div class="name">Blue Button</div>
 					</div>
 				</div>
-				<div id="bottom-bar">
+				<div class="bottom-bar">
 					<button class="add-layer">+</button>
 					<button class="add-adjustment-layer">O</button>
 					<button class="remove-layer">X</button>
