--- a/app.html
+++ b/app.html
@@ -48,7 +48,7 @@
 			<section id="sidebar">
 				<div class="top-bar">
 					<div class="opacity">
-						<span>Opacity</span>
+						<span>Opacity:</span>
 						<div class="number-input">
 							<input type="number" min="0" max="100" value="100">
 							<div class="trigger"></div>
@@ -56,21 +56,26 @@
 					</div>
 				</div>
 				<div id="layers">
+					<div class="layer selected">
+						<div class="preview" style="background: green"></div>
+						<div class="visible"></div>
+						<div class="name">Green Button</div>
+					</div>
 					<div class="layer">
 						<div class="preview" style="background: red"></div>
 						<div class="visible"></div>
 						<div class="name">Red Button</div>
 					</div>
-					<div class="layer">
+					<div class="layer disabled">
 						<div class="preview" style="background: blue"></div>
 						<div class="visible"></div>
 						<div class="name">Blue Button</div>
 					</div>
 				</div>
 				<div class="bottom-bar">
-					<button class="add-layer">+</button>
-					<button class="add-adjustment-layer">O</button>
-					<button class="remove-layer">X</button>
+					<button class="add-layer" title="Add layer"></button>
+					<button class="add-adjustment-layer" title="Add adjustment layer"></button>
+					<button class="remove-layer" title="Remove layer"></button>
 				</div>
 			</section>
 		</section>
