--- a/app.html
+++ b/app.html
@@ -38,7 +38,7 @@
 				</div>
 				<div id="gradient-settings">
 					<div class="switch">
-						<div class="linear">Linear</div>
+						<div class="linear selected">Linear</div>
 						<div class="radial">Radial</div>
 					</div>
 					<div class="dial"></div>
