--- a/app.html
+++ b/app.html
@@ -44,7 +44,7 @@
 					<div class="dial"></div>
 				</div>
 				<div id="gradient-output"></div>
-				<button class="settings">Settings</button>
+				<button class="settings"></button>
 				<button class="get-code">Copy CSS</button>
 			</section>
 			<section id="sidebar">
