Starting to look more like Graditor

--- a/app.html
+++ b/app.html
@@ -43,9 +43,11 @@
 					</div>
 					<div class="dial"></div>
 				</div>
-				<div id="gradient-output"></div>
-				<button class="settings"></button>
-				<button class="get-code">Copy CSS</button>
+				<div class="right">
+					<div id="gradient-output"></div>
+					<button class="settings"></button>
+					<button class="get-code">Copy CSS</button>
+				</div>
 			</section>
 			<section id="sidebar">
 				<div class="top-bar">
