--- a/app.html
+++ b/app.html
@@ -5,6 +5,8 @@
 		<link rel="stylesheet" href="css/style.css">
 		<script src="scripts/lib/jquery-1.7.2.min.js"></script>
 		<script src="scripts/lib/underscore-min.js"></script>
+		<script src="scripts/lib/tinycolor-min.js"></script>
+		<script src="scripts/color.js"></script>
 		<script src="scripts/app.js"></script>
 		<script src="scripts/core.js"></script>
 		<script src="scripts/ui.js"></script>
